--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCA</title>
+    <title>Machine Gun Killer</title>
+    <link rel="stylesheet" href="style.css">
 <style>
     p{
         text-align: center;
@@ -12,8 +13,32 @@
 </style>
 </head>
 <body>
-    <p>
-        BCA Bank Central Asia
-    </p>
+    <nav>
+        <div class="wrapper"> 
+            <div class="logo"><a href="">MachineGunKiller.</a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#HOME">Home</a></li>
+                    <li><a href="#TEAMS">Teams</a></li>
+                    <li><a href="#SCHEDULE">Schedule</a></li>
+                    <li><a href="#ACHIEVEMENTS">Achievments</a></li>
+                    <li><a href="#OURPONSORS">Our Sponsors</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="wrapper">
+         <section id="home">
+         <img src="3515670964.jpg"/>
+         <div class="kolom">
+            <p class="deskripsi">ESPORT TEAM </p>
+            <h1>From Gresik Jawa Timur</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, sequi. </p>
+            </div>
+        </section>
+     </div>
+
 </body>
 </html>
+
+
