--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
        <a href="#" class="logo"> Humas Himatif <span>.</span></a>
        <div class="menuToggle"  onclick="toggleMenu();"></div>
        <ul class="navigation">
-            <li><a href="#BERANDA" onclick="toggleMenu();">Beranda</a></li>
-            <li><a href="#TENTANGKAMI" onclick="toggleMenu();">Tentang</a></li>
-            <li><a href="#AKTIVITASKAMI" onclick="toggleMenu();">Aktivitas</a></li>
+            <li><a href="#banner" onclick="toggleMenu();">Beranda</a></li>
+            <li><a href="#about" onclick="toggleMenu();">Tentang</a></li>
+            <li><a href="#aktivitas" onclick="toggleMenu();">Aktivitas</a></li>
             <li><a href="#TIM" onclick="toggleMenu();">Tim Humas</a></li>
-            <li><a href="#KONTAKKAMI" onclick="toggleMenu();">Kontak Kami</a></li>
+            <li><a href="#KONTAKKAMI" onclick="toggleMenu();">Kontak</a></li>
         </ul>
      </nav>
     </header>
@@ -42,21 +42,39 @@
               <div class="col50">
                 <h2 class="titleText"><span>T</span>entang Kami</h2>
                 <p>
-                  Divisi Kewirausahaan memiliki beberapa program kerja salah satunya
-                  yaitu PUSAKA HIMATIF, disini kita mempunyai bidang usaha yaitu
-                  dalam bidang percetakan. Pusat alat tulis kantor himatif adalah
-                  koperasi yang menyediakan perlengkapan tulis mahasiswa maupun jasa
-                  cetak yang menunjang kebutuhan mahasiswa yang bertujuan untuk
-                  memudahkan mahasiswa dalam mencari jasa percetakan di area kampus
-                </p>
-              </div>
-              <div class="col50">
-                <div class="imgBx">
-                  <img src="Assets/img1.jpg" alt="" />
-                </div>
+                  Divisi HUMAS (Hubungan Masyarakat) Himpunan Mahasiswa Teknik Informatika Universitas Muhammadiyah
+                  Gresik (HIMATIF UMG) adalah divisi yang bertanggung jawab untuk mengelola
+                  dan mengkoordinasikan aktivitas humas atau hubungan masyarakat di lingkungan
+                  organisasi HIMATIF UMG di Universitas Muhammadiyah Gresik maupun pada Eksternal kampus.<br/>Tugas Pokok Divisi Meliputi : Pengelolaan Informasi,
+                  Komunikasi Internal maupun Eksternal,serta pengelolaan Media Sosial.<br/>
+                  serta memiliki 8 Progam Kerja dalam satu Periode
               </div>
             </div>
+        </article>
 
+        <article class="aktivitas" id="aktivitas">
+          <div class="tittle">
+            <h2 class="titleText">Aktivitas Kami</h2>
+            <p>Berikut adalah Beberapa Progam Kerja dari Divisi HUMAS</p>
+          </div>
+          <div class="content">
+            <div class="box">
+              <div class="imgBx">
+                <img src="Aset/Harlah.jpeg" alt=""/>
+              </div>
+              <div class="text">
+                <h3>Dies Natalis HIMATIF</h3>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src="Aset/Studi Banding.jpg" alt="" />
+              </div>
+              <div class="text">
+                <h3>Studi Banding</h3>
+              </div>
+            </div>
+          </div>
         </article>
 
 
