--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#about" onclick="toggleMenu();">Tentang</a></li>
             <li><a href="#aktivitas" onclick="toggleMenu();">Aktivitas</a></li>
             <li><a href="#TIM" onclick="toggleMenu();">Tim Humas</a></li>
-            <li><a href="#KONTAKKAMI" onclick="toggleMenu();">Kontak</a></li>
+            <li><a href="#gallery" onclick="toggleMenu();">Login</a></li>
         </ul>
      </nav>
     </header>
@@ -74,6 +74,32 @@
                 <h3>Studi Banding</h3>
               </div>
             </div>
+            <div>
+              <div class="box">
+                <div class="imgBx">
+                  <img src="Aset/formasi.jpeg" alt="">
+                </div>
+                <div class="text">
+                  <h3>Forum Aspirasi HIMATIF</h3>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src="Aset/gts 1.jpeg" alt="">
+              </div>
+              <div class="text">
+                <h3>Himatif Goes To School</h3>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imgBx">
+                <img src="Aset/hiped.jpeg" alt="">
+              </div>
+              <div class="text">
+                <h3>Himatif Peduli</h3>
+              </div>
+            </div>
           </div>
         </article>
 
@@ -81,7 +107,7 @@
     </main>
     
     <section id="gallery">
-        <h2>gallery</h1>
+        <h2>login</h1>
         <div id="data"></div>
     </section>
     <form id="login">
